# end-to-end-ml-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app-deployment.yaml  app-service.yaml  docker-compose.yaml  pyproject.toml  text_classification_flow.py
.github/workflows/: ci_cd.yml
app/: app.py
end_to_end_ml_project/: evaluate.py  feature_engineering.py  main.py  neural_net.py  preprocessing.py  tfidf_dataset.py  training.py
end_to_end_ml_project/app/: app.py  preprocessing_inference_pipeline.py
infra/: main.tf  terraform.tfstate  terraform.tfstate.backup
infra-terraform/: main.tf  variables.tf
